force-app/main/default/objects/AARP_Org_Services__mdt/AARP_Org_Services__mdt.object-meta.xml
<CustomObject>
    <label>AARP Org Service</label>
    <pluralLabel>AARP Org Services</pluralLabel>
</CustomObject>