force-app/main/default/objects/AARP_Org_Services__mdt/fields/AARP_Auth_URL__c.field-meta.xml
<CustomField>
    <fullName>AARP_Auth_URL__c</fullName>
    <label>AARP Auth URL</label>
    <type>Url</type>
</CustomField>