force-app/main/default/objects/AARP_Org_Services__mdt/fields/AARP_CoreAPI_URL__c.field-meta.xml
<CustomField>
    <fullName>AARP_CoreAPI_URL__c</fullName>
    <label>AARP CoreAPI URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>