force-app/main/default/objects/AARP_Org_Services__mdt/fields/Call_Back_URL__c.field-meta.xml
<CustomField>
    <fullName>Call_Back_URL__c</fullName>
    <label>Call Back URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>