force-app/main/default/objects/AARP_Org_Services__mdt/fields/Okta_Token_URL__c.field-meta.xml
<CustomField>
    <fullName>Okta_Token_URL__c</fullName>
    <label>Okta Token URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>