force-app/main/default/objects/AARP_Org_Services__mdt/fields/Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_URL__c</fullName>
    <label>Registration URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>